<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#424242"
    tools:context="com.example.no0ne.lapitchat.activity.StartActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/chat" />
    
    <TextView
        android:id="@+id/welcome"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:text="@string/text_view_welcome" />

    <Button
        android:id="@+id/button_existing_account"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:layout_below="@+id/welcome"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:background="#212121"
        android:text="@string/button_already_have_an_account" />

    <Button
        android:id="@+id/button_new_account"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:layout_below="@+id/button_existing_account"
        android:layout_centerHorizontal="true"
        android:background="@android:color/white"
        android:text="@string/button_need_a_new_account" />

</RelativeLayout>
